--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- Enemy Ships -->
     <div class="enemy">
-        <img class="enemy-ship" src="https://i.imgur.com/uzR6lqo.png" alt="">
+        <img class="enemy-ship" src="https://i.imgur.com/InBfg8s.png" alt="">
     </div>
 
     <!-- Attack, Repair, Defend Buttons -->
