Added more changes from the group

--- a/game.html
+++ b/game.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,16 +11,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300&display=swap" rel="stylesheet"> -->
   <title>Space Battle</title>
 </head>
-
 <body>
+  <div class="game-over-container" style="display: none">
+    <h1 class="game-over-h1">YOU DIED!</h1>
+    <a href="game.html"><button class="game-over-btn">Play again?</button></a>
+</div>
+  <div class="hero-container">
   <!-- Audio Elements -->
-  <div id="all-sound">
     <audio id="attack-sound" src="https://docs.google.com/uc?export=download&id=1meUjLwi9QsWogZkDvBfUH_RcZheHpRK9"></audio>
     <audio id="repair-sound" src="https://docs.google.com/uc?export=download&id=11loKDUxfFw0GuCPL5wMSGszRfYjkn_D7"></audio>
-    <!-- <audio id="battle-music" src="https://docs.google.com/uc?export=download&id=1hOLO2iyrr6u1VR0Q6GIbyyFFjNkTwSG6" loop></audio>
-    <audio id="title-screen-music" src="https://docs.google.com/uc?export=download&id=1EqebZCOLJeKHaDwhOjs6_L-YFGP04bLT" loop></audio>
-    <audio id="end-screen-music" src="https://docs.google.com/uc?export=download&id=1xDun_-61-XaAQKQCGeOxrwGODoXekuXs"  loop></audio> -->
-  </div>
+    <audio id="battle-music" autoplay loop>
+    <source src="https://docs.google.com/uc?export=download&id=1hOLO2iyrr6u1VR0Q6GIbyyFFjNkTwSG6" type="audio/wav">
+    </audio>
  <!-- HP Bars in header -->
  <div class="hp-bars">
   <div class="hp-bars__player">
@@ -58,28 +59,24 @@
     <img class="player-ship" src="https://i.imgur.com/CoK62ir.png" alt="" />
     <img class="player-attack" src="https://i.imgur.com/iZ1qLxs.png" alt="">
   </div>
-
   <!-- Enemy Ships -->
   <div class="enemy">
     <img id ='enemy-ship' class="enemy-ship" src="https://i.imgur.com/InBfg8s.png" alt="" />
     <img class="garbage-attack" src="https://i.imgur.com/v6hyIAT.png" alt="">
   </div>
 </div>
-
 <!-- Play-by-Play Logs -->
 <div id='play-logs' class="play-logs">
   <p class="play-logs__message">
     USS Assembly attacked Garbage Man for 20HP! Critical Hit!
   </p>
 </div>
-
 <!-- Attack, Repair, Defend Buttons -->
 <div class="player-moves">
   <button id='attack-btn' class="player-move-btn">Attack</button>
   <button id='repair-btn' class="player-move-btn">Repair</button>
   <!-- <button id='defend-btn' class="player-move-btn">Defend</button> -->
 </div>
-   
+</div>
 </body>
-
 </html>
