--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Space Game Start Screen</title>
   <link href="css/starting.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
-
+  <audio id="title-screen-music" autoplay loop>
+    <source src="https://docs.google.com/uc?export=download&id=1EqebZCOLJeKHaDwhOjs6_L-YFGP04bLT" type="audio/wav">
+  </audio>
   <div id="menu">REVENGE OF<BR><SPAN>GARBAGEMAN</SPAN>
     <BR style="line-height:70px;">
     <br>
     <!-- <input type="button" value="Start" target="/game.html"></input> -->
     <button onclick="window.location.href='game.html'">Start</button>
     <BR style="line-height:70px;">
-
   </div>
 </body>
-
 </html>
